syntax = "proto3";

package user.v1alpha1;

import "google/api/annotations.proto";
import "api/common/error_reason.proto";
import "api/user/v1alpha1/message.proto";

option go_package = "api/user/v1alpha1;v1alpha1";

// @mcp: reject
service UserInterface {
      rpc SignIn(SignInRequest) returns (User) {
            option (google.api.http) = {
              post: "/api/v1alpha1/user/signin"
              body: "*"
            };
      }

      rpc GetUsers(UsersRequest) returns (Users) {
            option (google.api.http) = {
              get: "/api/v1alpha1/users"
            };
      }

      rpc SaveUser(User) returns (common.Msg) {
            option (google.api.http) = {
              post: "/api/v1alpha1/user"
              body: "*"
            };
      }

      rpc DeleteUser(User) returns (common.Msg) {
            option (google.api.http) = {
              delete: "/api/v1alpha1/user"
            };
      }

      // Enable user
      rpc EnableUser(UserIdRequest) returns (common.Msg) {
            option (google.api.http) = {
              post: "/api/v1alpha1/user/enable"
              body: "*"
            };
      }

      // Disable user
      rpc DisableUser(UserIdRequest) returns (common.Msg) {
            option (google.api.http) = {
              post: "/api/v1alpha1/user/disable"
              body: "*"
            };
      }

      // save role
      rpc SaveRole(Role) returns (common.Msg) {
            option (google.api.http) = {
              post: "/api/v1alpha1/role"
              body: "*"
            };
      }

      // get role
      rpc GetRoles(RolesRequest) returns (Roles) {
            option (google.api.http) = {
              get: "/api/v1alpha1/roles"
            };
      }

      // get one role
      rpc GetRole(RoleIdRequest) returns (Role) {
            option (google.api.http) = {
              get: "/api/v1alpha1/role"
            };
      }

      // delete role
      rpc DeleteRole(RoleIdRequest) returns (common.Msg) {
            option (google.api.http) = {
              delete: "/api/v1alpha1/role"
            };
      }

}