syntax = "proto3";

package workspace.v1alpha1;

import "google/api/annotations.proto";
import "api/common/error_reason.proto";
import "api/workspace/v1alpha1/message.proto";

option go_package = "api/workspace/v1alpha1;v1alpha1";

service WorkspaceInterface {
      rpc Save(Workspace) returns (common.Msg) {
            option (google.api.http) = {
              post: "/api/v1alpha1/workspace/save"
              body: "*"
            };
      }

      rpc Get(WorkspaceParam) returns (Workspace) {
            option (google.api.http) = {
              get: "/api/v1alpha1/workspace/get"
            };
      }
      
      rpc List(WorkspaceParam) returns (Workspaces) {
            option (google.api.http) = {
              get: "/api/v1alpha1/workspace/list"
            };
      }
}