syntax = "proto3";

package biz.user;

option go_package = "github.com/f-rambo/cloud-copilot/internal/biz;";

enum UserStatus {
      USER_INIT = 0;
      USER_ENABLE = 1;
      USER_DISABLE = 2;
      USER_DELETED = 3;
}

enum UserSignType {
      CREDENTIALS = 0;
      GITHUB = 1;
}

message User {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      int64 id = 1; // @gotags: gorm:"column:id;primaryKey;AUTO_INCREMENT"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      string email = 3; // @gotags: gorm:"column:email; default:''; NOT NULL"
      string gitrepo_name = 4; // @gotags: gorm:"column:gitrepo_name; default:''; NOT NULL"
      string imagerepo_name = 5; // @gotags: gorm:"column:imagerepo_name; default:''; NOT NULL"
      string password = 6; // @gotags: gorm:"column:password; default:''; NOT NULL"
      UserStatus status = 7; // @gotags: gorm:"column:status; default:0; NOT NULL"
      string access_token = 8; // @gotags: gorm:"-"`
      UserSignType sign_type = 9; // @gotags: gorm:"column:sign_type; default:0; NOT NULL"
      int64 workspace_id = 10; // @gotags: gorm:"column:workspace_id; default:0; NOT NULL"
      string git_repository_token = 11; // @gotags: gorm:"column:gitrepository_token; default:''; NOT NULL"
      string image_repository_token = 12; // @gotags: gorm:"column:imagerepository_token; default:''; NOT NULL"
}

message Role {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      int64 id = 1; // @gotags: gorm:"column:id;primaryKey;AUTO_INCREMENT"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      string description = 3; // @gotags: gorm:"column:description; default:''; NOT NULL"
}

message UserRole {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      int64 id = 1; // @gotags: gorm:"column:id;primaryKey;AUTO_INCREMENT"
      int64 user_id = 2; // @gotags: gorm:"column:user_id; default:0; NOT NULL"
      int64 role_id = 3; // @gotags: gorm:"column:role_id; default:0; NOT NULL"
}

message ResourcePermissions {
      // @goimport: "gorm.io/gorm"
      // @gofield: gorm.Model
      int64 id = 1; // @gotags: gorm:"column:id;primaryKey;AUTO_INCREMENT"
      string verbs = 2; // @gotags: gorm:"column:verbs; default:''; NOT NULL"
      string resources = 3; // @gotags: gorm:"column:resources; default:''; NOT NULL"
      string Permissions = 4; // @gotags: gorm:"column:permissions; default:''; NOT NULL"
}