syntax = "proto3";

package sidecar.api.cluster;

import "google/protobuf/empty.proto";
import "internal/repository/sidecar/api/cluster/message.proto";
import "api/common/error_reason.proto";

option go_package = "github.com/f-rambo/cloud-copilot/internal/repository/sidecar/api/cluster;";


service ClusterInterface {
      rpc Ping(google.protobuf.Empty) returns (common.Msg);

      rpc GetLogs(stream sidecar.api.cluster.LogRequest) returns (stream sidecar.api.cluster.LogResponse);

      rpc Info(google.protobuf.Empty) returns (sidecar.api.cluster.Cluster);
}